@@ -158,6 +158,10 @@ contain 32 hex chars. For example using \fBa1a2a3a4a5a6a7a8b1b2b3b4b5b6b7b8\fR
 as parameter will set even code word to \fBa1a2a3a4a5a6a7a8\fR and odd code
 word to \fBb1b2b3b4b5b6b7b8\fR.
 .TP
+\fB\-Q\fR, \fB\-\-biss-key\fR <biss-key>
+Set BISS key to be used for decryption. The \fB<biss-key>\fR should
+contain 12 hex chars. For example \fB112233445566\fR is valid BISS key.
+.TP
 .SH CAMD OPTIONS
 .PP
 .TP
